<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeiroChat</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Write Message...</string>
    <string name="serverbutton">Server</string>
    <string name="clientbutton">Client</string>
    <string name="sendbutton">Send</string>
    <string name="portno">PORT</string>
    <string name="porthint">8080</string>
    <string name="host">HOST</string>
    <string name="hosthint">127.0.0.1</string>
    
    <string name="username">USERNAME(Optional)</string>
    <string name="password">PASSWORD(Optional)</string>

</resources>
